--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.17.0",
     "@supabase/supabase-js": "^2.43.1",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
